syntax = "proto3";

package gatewayService;
option go_package = ".;gatewayService";


message Car {
  int64  ID = 1;
  string Name = 2;
  string Price = 3;
  string Description = 4;
  string Brand = 5;
  int64  UserID = 6;
  int64  EngineID = 7;
}

message Engine {
  int64  ID = 1;
  string Name = 2;
  string Description = 3;
}


message GetUserCarsReq {
  string ID = 1;
}

message GetUserCarsByBrandReq {
  string Brand = 1;
}

message GetUserCarsRes {
 repeated Car Cars = 1;
}

message GetUserEnginesRes {
  repeated Engine Engines = 1;
}

message GetUserEngineRes {
  Engine Engines = 1;
}
 

message Empty {}


service GatewayService {
  rpc GetUserCars(GetUserCarsReq) returns (GetUserCarsRes) {}
  rpc GetUserEngines(GetUserCarsReq) returns (GetUserEnginesRes) {}
  rpc GetUserEnginesByBrand(GetUserCarsByBrandReq) returns (GetUserEnginesRes) {}
  rpc GetUserEngineByCar(GetUserCarsReq) returns (GetUserEngineRes) {}
}